# iss-preprocess

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  MANIFEST.in  README.md  align_barcodes.sh  align_spots.sh  basecall_tile.sh  bleedthrough.html  call.html  codebook_olf_top_232.csv  correction.html  create_grand_average.sh  create_single_average.sh  detect_mcherry.html  environment.yml  extract_roi.sh  extract_tile.sh  flowchart_legends.html  genindex.html  getting_started.html  hybridisation.html  index.html  iss_preprocess.call.html  iss_preprocess.config.html  iss_preprocess.coppafish.html  iss_preprocess.diagnostics.html  iss_preprocess.html  iss_preprocess.image.html  iss_preprocess.io.html  iss_preprocess.pipeline.html  iss_preprocess.reg.html  iss_preprocess.segment.html  iss_preprocess.vis.html  modules.html  objects.inv  project_and_average.html  project_roi.sh  project_row.sh  (+13 more)
_sources/: index.rst.txt  iss_preprocess.call.rst.txt  iss_preprocess.pipeline.rst.txt  iss_preprocess.rst.txt  registration.rst.txt
docs/: dep_graph.py  iss_flow_chart.md  iss_pipeline_chart.vsdx  registration.md  requirements.txt
docs/source/: bleedthrough.rst  call.rst  conf.py  correction.rst  detect_mcherry.rst  detect_starter.rst  flowchart_legends.rst  getting_started.rst  hybridisation.rst  index.rst  iss_preprocess.config.rst  iss_preprocess.coppafish.rst  iss_preprocess.diagnostics.rst  iss_preprocess.image.rst  iss_preprocess.io.rst  iss_preprocess.reg.rst  iss_preprocess.rst  iss_preprocess.segment.rst  iss_preprocess.vis.rst  project_and_average.rst  registration.rst  segmentation.rst  sequencing.rst
examples/: barcodes_calling_example.py  micromanager_stitching.py  omp_example.py  registration_and_correction.py  segmentation_example.py
html/: .buildinfo  iss_preprocess.config.html  iss_preprocess.html  iss_preprocess.image.html  iss_preprocess.io.html  iss_preprocess.pipeline.html  iss_preprocess.reg.html  modules.html  py-modindex.html  search.html  searchindex.js
html/_sources/: modules.rst.txt
io/: importStack.py
iss-preprocess/io/: __init__.py  import_stack.py
iss_preprocess/: __init__.py  cli.py  decorators.py
iss_preprocess/call/: __init__.py  call.py  codebook_78_20221216.csv  codebook_83gene_pool.csv  codebook_88_20230216.csv  codebook_YS220.csv  codebook_hypo.csv  codebook_olf_all_1121.csv  codebook_olf_top_232.csv  codebook_raziye_SC.csv  csm_and_v1_codebook_20250514.csv  csm_and_v1_codebook_20250515.csv  csm_codebook.csv  csm_codebook_20250514.csv  hybridisation_probes.yml  omp.py  spot_shape.py  spot_sign_image.npy
iss_preprocess/cli/: call_cli.py  core_cli.py  iss.py  reg2ref_cli.py  register_cli.py  segment_cli.py  sync_and_crunch_cli.py
iss_preprocess/config/: __init__.py  default_ops.py  default_ops.yml  example_metadata.yml
iss_preprocess/coppafish/: LICENSE.md  utils.py
iss_preprocess/diagnostics/: __init__.py  diag_ara.py  diag_hybridisation.py  diag_reg2ref.py  diag_register.py  diag_segmentation.py  diag_sequencing.py  diag_stitching.py
iss_preprocess/image/: __init__.py  correction.py  fstack.py  run_correction.py  utils.py
iss_preprocess/io/: import_stack.py  load.py  save.py
iss_preprocess/pipeline/: __init__.py  align_spots_and_cells.py  ara_registration.py  core.py  diagnostic.py  diagnostics.py  hybridisation.py  pipeline.py  project.py  reg2ref.py  register.py  segment.py  sequencing.py  stitch.py  sync_and_crunch.py
iss_preprocess/reg/: __init__.py  rounds.py  rounds_and_channels.py  tiles.py  util.py
iss_preprocess/segment/: __init__.py  barcodes.py  cells.py  roi.py  segment_barcodes.py  spots.py  train_model.py
iss_preprocess/vis/: __init__.py  click_on_starter.py  diagnostics.py  interactive.py  utils.py  vis.py
notebooks/: barcode_cells.ipynb  example_starter_cell.ipynb  gene_colour_plot.py  gene_plotting_grid.ipynb  in_vivo_ex_vivo_fig.ipynb  pipeline.ipynb  rabies_UMAP.ipynb  register_and_apply_ara_coords.ipynb  register_mcherry_to_ref.ipynb  register_to_ara.ipynb  registration.ipynb  save_mcherry_overview.ipynb  segment_spots_suite2p.ipynb  select_basecalling_parameters.ipynb  select_bleedtrough_parameters.ipynb  select_mcherry_detection_parameters.ipynb  select_reg2ref_parameters.ipynb  select_reg_fluorescent_tile_parameters.ipynb  select_segmentation_parameters.ipynb  select_spot_detection_thresholds.ipynb  stitch_overview_for_abba.ipynb
scripts/: align_spots.sh  basecall_tile.sh  create_grand_average.sh  create_single_average.sh  extract_hyb_spots.sh  extract_roi.sh  extract_tile.sh  handle_failed.sh  overview_single_roi.sh  plot_overview.sh  project_roi.sh  project_round.sh  project_row.sh  project_tile.sh  register_across_acquisitions.sh  register_hyb_tile.sh  register_ref_tile.sh  register_tile.sh  register_tile_to_ref.sh  register_within_acquisition.sh  remove_non_cell_masks.sh  segment_mcherry_tile.sh  segment_roi.sh  unmix_channels.sh
tests/: README.md  pytest_fixture.py  test_call_barcode.py  test_io.py
