[project]
name = "iss-preprocess"
authors = [{name = "Znamenskiy lab", email= "petr.znamenskiy@crick.ac.uk"}]
description = "Tools for processing in situ sequencing data"
readme = "README.md"
requires-python = ">=3.9.0"
dynamic = ["version"]
dependencies = [
        "numpy",
        "matplotlib",
        "scikit-image",
        "scikit-learn",
        "flexiznam @ git+ssh://git@github.com/znamlab/flexiznam.git",
        "znamutils @ git+ssh://git@github.com/znamlab/znamutils.git",
        "image-tools @ git+ssh://git@github.com/znamlab/image-tools.git",
        "opencv-python",
        "numba",
        "cellpose",
        "click",
        "brainglobe_atlasapi",
        "natsort",
        "seaborn",
        "decorator",
        "scipy>=1.11.0",]
license = {text = "MIT"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
iss = "iss_preprocess.cli.iss:iss_cli"
iss-register = "iss_preprocess.cli.register_cli:register_cli"
iss-sync-and-crunch = "iss_preprocess.cli.sync_and_crunch_cli:sync_and_crunch_cli"

[project.urls]
"Homepage" = "https://github.com/znamlab/iss-preprocess"
"Bug Tracker" = "https://github.com/znamlab/iss-preprocess/issues"
"Documentation" = "https://znamlab.github.io/iss-preprocess"

"Source Code" = "https://github.com/znamlab/iss-preprocess"
"User Support" = "https://github.com/znamlab/iss-preprocess/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
  "imageio",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["iss_preprocess*"]
exclude = ["tests", "docs*"]


[tool.pytest.ini_options]
addopts = "--cov=iss_preprocess"

[tool.black]
target-version = ['py39', 'py310', 'py311']
skip-string-normalization = false
line-length = 88

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
  "docs/",
  "docs/source/",
]


[tool.ruff]
line-length = 88
exclude = ["__init__.py","build",".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}
isolated_build = True

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=iss_preprocess --cov-report=xml
"""
